Fixing layout issues

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -94,6 +94,7 @@
   }
   .footer__logo {
     padding-top: 4.44rem;
+    margin-left: 0;
   }
   .nav {
     margin-top: 4.69rem;
@@ -105,6 +106,7 @@
   }
   .footer__description {
     width: 33.75rem;
+    margin-left: 0;
     span{
       margin-top: 3.5rem;
       padding-bottom: 3rem;
